# Pick-and-Place-Robotic-Arm

./: .gitignore  README.md
src/custom_message/: package.xml
src/robotic_arm/: package.xml  setup.py
src/robotic_arm/config/: jtc.yaml
src/robotic_arm/launch/: controller.launch.py  gazebo.launch.py  rviz.launch.py
src/robotic_arm/models/bin_blue/: model.config  model.sdf
src/robotic_arm/models/bin_green/: model.config  model.sdf
src/robotic_arm/models/bin_red/: model.config  model.sdf
src/robotic_arm/models/block_blue/: model.config  model.sdf
src/robotic_arm/models/block_green/: model.config  model.sdf
src/robotic_arm/models/block_red/: model.config  model.sdf
src/robotic_arm/models/kinect/: model-1_2.sdf  model-1_3.sdf  model-1_4.sdf  model.sdf
src/robotic_arm/models/underbin_bench/: model.config  model.sdf
src/robotic_arm/models/workbench/: model.config  model.sdf
src/robotic_arm/robotic_arm/: DENEME.py  arm_commander.py  inverse_kinematics.py  object_detector.py  state_machine.py  test_controller.py
src/robotic_arm/urdf/: robotic_arm.urdf
src/robotic_arm/world/: my_world.sdf
